Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
macOSX 10.15
Description
Since PROTON-2343 build flags have been consistently applied to all builds. This has resulted in the MacOS (clang) build respecting the ENABLE_HIDE_UNEXPORTED_SYMBOLS, where it seemingly didn't before.
This causes build failures like:
% ./cpp/connection_driver_test TEST: test_driver_link_id() TEST: test_endpoint_close() TEST: test_driver_disconnected() TEST: test_no_container() ERROR test_no_container() ../cpp/src/connection_driver_test.cpp:546: No container TEST: test_spin_interrupt() TEST: test_link_address() TEST: test_link_anonymous_dynamic() TEST: test_link_capability_filter() TEST: test_message() TEST: test_message_timeout_succeed() TEST: test_message_timeout_fail()
Attachments
Issue Links
- is caused by
-
PROTON-2343 Simplify and clean up build flag selection for different compilers
- Closed
- is related to
-
PROTON-2351 [c] Proactor: MacOSX/FreeBSD libuv proactor unit test fails with libuv 1.41
- Resolved
- relates to
-
PROTON-2371 C++ test failures on MacOS with ASAN due to unexported symbols being hidden
- Open