PROTON-2354: Better fix for some 'macOS' test failures

Actually these failures aren't specific to macOS rather to clang's
libc++ runtime library which is pickier about RTTI information
being exported for excpetion catching and dynamic_cast<>.